# TurboClean

./: .gitignore  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  index.md  quickstart.md
example/: custom_rules.py  streaming_from_url.py
src/pure_data/: __init__.py  cleaners.py  cli.py  contracts.py  engine.py  io_adapter.py  profiling.py  reporting.py  rule_factory.py
src/turboclean/: __init__.py  cleaners.py  contracts.py  engine.py  profiling.py  utils.py
tests/: conftest.py  test_cleaners.py  test_cli.py  test_engine.py  test_io_adapter.py  test_profiling.py
