[tool.poetry]
name = "turboclean"
version = "0.3.0"
description = "Ultra-fast, adaptive data purification engine that handle with zero-copy, lazy execution."
authors = ["Ali Khorasani <alikhorasanishirehjeyni@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "turboclean", from = "src" }]
include = ["README.md", "LICENSE", "benchmarks/"]

[tool.poetry.dependencies]
python = "^3.10"
polars = ">=0.19.0,<1.0"
pyarrow = ">=14.0.0" 
click = "^8.1.0"
rich = "^13.7.0"
pyyaml = "^6.0"
polars-lts-cpu = { version = "^0.19.0", optional = true }
sqlalchemy = { version = "^2.0", optional = true }
openpyxl = { version = "^3.1.0", optional = true }
pytest = { version = "^7.4.0", optional = true }
numpy = { version = "<2", optional = true }
ruff = { version = "^0.1.0", optional = true }
pandas = { version = "^2.1.0", optional = true }
pre-commit = { version = "^3.0", optional = true }
pytest-cov = { version = "^5.0", optional = true }

[tool.poetry.extras]
sql = ["sqlalchemy"]
excel = ["openpyxl"]
all = ["sqlalchemy", "openpyxl"]
dev = ["pytest", "mypy", "ruff", "pandas", "pre-commit", "numpy", "pytest-cov"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["polars", "polars.*", "pyarrow", "pyarrow.*", "yaml", "pandas", "rich.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
